--- a/home.html
+++ b/home.html
@@ -62,87 +62,128 @@
 <thead>
   <tr style="font-size:28px;">
     <th>CHANGE</th> 
+    <th>NAME</th> 
   </tr>
 </thead>
 <tbody>
   <tr>
     <td id="changediv0">
     </td>
+    <td id="namediv0">
+    </td>
   </tr>
   <tr>
     <td id="changediv1">
+    </td>
+    <td id="namediv1">
     </td>
   </tr>
   <tr>
     <td id="changediv2">
     </td>
+    <td id="namediv2">
+    </td>
   </tr>
   <tr>
     <td id="changediv3">
+    </td>
+    <td id="namediv3">
     </td>
   </tr>
   <tr>
    <td id="changediv4">
    </td>
+   <td id="namediv4">
+    </td>
   </tr>
   <tr>
     <td id="changediv5">
+    </td>
+    <td id="namediv5">
     </td>
   </tr>
   <tr>
     <td id="changediv6">
     </td>
+    <td id="namediv6">
+    </td>
   </tr>
   <tr>
     <td id="changediv7">
+    </td>
+    <td id="namediv7">
     </td>
   </tr>
   <tr>
     <td id="changediv8">
     </td>
+    <td id="namediv8">
+    </td>
   </tr>
   <tr>
     <td id="changediv9">
+    </td>
+    <td id="namediv9">
     </td>
   </tr>
   <tr>
     <td id="changediv10">
     </td>
+    <td id="namediv10">
+    </td>
   </tr>
   <tr>
     <td id="changediv11">
+    </td>
+    <td id="namediv11">
     </td>
   </tr>
   <tr>
     <td id="changediv12">
     </td>
+    <td id="namediv12">
+    </td>
   </tr>
   <tr>
     <td id="changediv13">
+    </td>
+    <td id="namediv13">
     </td>
   </tr>
   <tr>
     <td id="changediv14">
     </td>
+    <td id="namediv14">
+    </td>
   </tr>
   <tr>
     <td id="changediv15">
+    </td>
+    <td id="namediv15">
     </td>
   </tr>
   <tr>
     <td id="changediv16">
     </td>
+    <td id="namediv16">
+    </td>
   </tr>
   <tr>
     <td id="changediv17">
+    </td>
+    <td id="namediv17">
     </td>
   </tr>
   <tr>
     <td id="changediv18">
     </td>
+    <td id="namediv18">
+    </td>
   </tr>
   <tr>
     <td id="changediv19">
+    </td>
+    <td id="namediv19">
     </td>
   </tr>
 </tbody>
@@ -160,7 +201,7 @@
           var GameResultsSpan=new Array();  //array com o <span> que exibirão os resultados aleatorios
             for (var n = 0; n != 8; ++n){ 
            GameResultss[n] = getRandomInt(0, 3); //range dos numeros inteiros aleatorios
-          console.log(GameResultss[n]);}
+         }
 
       $(function (){
         for (var n = 0; n != 8; ++n){
