--- a/first_time.html
+++ b/first_time.html
@@ -16,7 +16,7 @@
 
 <div class="ter">
 <div id="first_page">
-   <center id="resposta" class="pre_load2"><div></div></center>
+   <center id="resposta"><div></div></center>
    <center><div id="resposta2"></div></center>
     </div>
     <div id="second_page" class="hidden">
@@ -60,7 +60,7 @@
             <option value="Vit">Vitória</option>
     </select>
     </div>
-  <p class="pre_load2" style="font-weight: bold;">Your Favorite National Team:</p>
+  <p style="font-weight: bold;">Your Favorite National Team:</p>
     <select id="NtlTeams" onchange="check2()">
             <option disabled selected value>Choose Your National Team</option>
             <option value="Arge">Argentina</option>
