--- a/home.html
+++ b/home.html
@@ -40,12 +40,23 @@
 </div>
 
 <div style="background-color:#b7c3ba; width:50%; height:50%; float:right">
- <center><h1>Last Games</h1></center>
- <br>
- <center><h3 style="color: black;">Flamengo <span id="Resultss0"></span> x <span id="Resultss1"></span> Corinthias</h3></center>
- <center><h3 style="color: black;">Cruzeiro <span id="Resultss2"></span> x <span id="Resultss3"></span> Atlético-MG</h3></center>
- <center><h3 style="color: black;">Palmeiras <span id="Resultss4"></span> x <span id="Resultss5"></span> Santa Cruz</h3></center>
- <center><h3 style="color: black;">Brazil <span id="Resultss6"></span> x <span id="Resultss7"></span> Germany</h3></center>
+<center style="background:#1b1e24;padding:10px;color:#C1C3D1;"><h1>Last Games</h1></center>
+<table>
+<tbody> 
+<tr>
+ <td><center><h2>Flamengo <span id="Resultss0"></span> x <span id="Resultss1"></span> Corinthias</h2></center></td>
+ </tr>
+ <tr>
+ <td><center><h2>Cruzeiro <span id="Resultss2"></span> x <span id="Resultss3"></span> Atlético-MG</h2></center></td>
+  </tr>
+ <tr>
+ <td><center><h2>Palmeiras <span id="Resultss4"></span> x <span id="Resultss5"></span> Santa Cruz</h2></center></td>
+  </tr>
+ <tr>
+ <td><center><h2>Brazil <span id="Resultss6"></span> x <span id="Resultss7"></span> Germany</h2></center></td>
+  </tr>
+ </tbody>
+ </table>
 
 </div>
 
