--- a/home.html
+++ b/home.html
@@ -39,7 +39,7 @@
     </div><center>
 </div>
 
-<div style="background-color:#b7c3ba; width:50%; height:50%; float:right">
+<div style="background-color:#f2f5f3; width:50%; height:50%; float:right">
 <center style="background:#1b1e24;padding:10px;color:#C1C3D1;"><h1>Last Games</h1></center>
 <table>
 <tbody> 
@@ -60,7 +60,7 @@
 
 </div>
 
-<div style="background-color:#b7c3ba; width:50%; height:50%; float:left">
+<div style="background-color:#f2f5f3; width:50%; height:50%; float:left">
 <center><h1>Net Worth</h1></center>
   <div style="margin:20px;">
         <canvas id="canvasNetWorth" height="235px" ></canvas>
