--- a/home.html
+++ b/home.html
@@ -44,16 +44,16 @@
 <table>
 <tbody> 
 <tr>
- <td><center><h2>Flamengo <span id="Resultss0"></span> <span class="XXxX">X</span> <span id="Resultss1"></span> Corinthias</h2></center></td>
+ <td><center><h2>Flamengo <span id="Resultss0" class="ResultsNumber"></span> <span class="XXxX">X</span> <span id="Resultss1" class="ResultsNumber"></span> Corinthias</h2></center></td>
  </tr>
  <tr>
- <td><center><h2>Cruzeiro <span id="Resultss2"></span> <span class="XXxX">X</span> <span id="Resultss3"></span> Atlético-MG</h2></center></td>
+ <td><center><h2>Cruzeiro <span id="Resultss2" class="ResultsNumber"></span> <span class="XXxX">X</span> <span id="Resultss3" class="ResultsNumber"></span> Atlético-MG</h2></center></td>
   </tr>
  <tr>
- <td><center><h2>Palmeiras <span id="Resultss4"></span> <span class="XXxX">X</span> <span id="Resultss5"></span> Santa Cruz</h2></center></td>
+ <td><center><h2>Palmeiras <span id="Resultss4" class="ResultsNumber"></span> <span class="XXxX">X</span> <span id="Resultss5" class="ResultsNumber"></span> Santa Cruz</h2></center></td>
   </tr>
  <tr>
- <td><center><h2>Brazil <span id="Resultss6"></span> <span class="XXxX">X</span> <span id="Resultss7"></span> Germany</h2></center></td>
+ <td><center><h2>Brazil <span id="Resultss6" class="ResultsNumber"></span> <span class="XXxX">X</span> <span id="Resultss7" class="ResultsNumber"></span> Germany</h2></center></td>
   </tr>
  </tbody>
  </table>
