--- a/home.html
+++ b/home.html
@@ -31,14 +31,33 @@
     </ul>
 
     <div class="ter">
-      <div style="background-color:#dfe3e0; width:50%; height:50%; float:left">
-      <center><h1>Your Portfolio</h1></center>
-      <center><div id="canvas-holder" style="width: 300px;">
-        <canvas id="chart-area2" width="300" height="300" />
-    </div><center>
+
+<div style="margin:10px;height:40%;width:63.85%;background-color:#f2f5f3;float:left;">
+<center><h1>Net Worth</h1></center>
+  <div style="margin:20px;">
+        <canvas id="canvasNetWorth" height="320%"></canvas>
+    </div>
 </div>
 
-<div style="background-color:#f2f5f3; width:50%; height:50%; float:right;overflow:hidden;overflow-y:scroll;">
+<div style="background-color:#f2f5f3; width:31%; height:40%;overflow:hidden;overflow-y:scroll;margin:10px;float: left;">
+<center style="background:#1b1e24;padding:10px;color:#C1C3D1;"><h1>NEWS</h1></center>
+<br>
+<h3><strong style="color:black;">FUTMARKET Relase Date Set to 2017's Fall</strong></h3>
+<small style="color:#8e95a0;">According to FUTMARKET CEO, Pedro Andrade, the entire crew is working hard to deliver a playable version of the game as soon as possible.</small>
+<h3><strong style="color:black;">The Beta version is live!</strong></h3>
+<small style="color:#8e95a0;">First version of FUTMARKET is now live. For some reason you were specially picked for this test version, make your stay worth it.</small>
+</div>
+
+<br>
+
+<div style="clear:left;background-color:#f2f5f3; width:31%; height:30%;float:left;margin:10px;overflow:hidden;">
+      <center><h1>Your Portfolio</h1></center>
+      <div id="canvas-holder">
+        <canvas id="chart-area2" style="width:400px;float:center;"></canvas>
+    </div>
+</div>
+
+<div style="background-color:#f2f5f3; width:31%; height:30%;float:left;overflow:hidden;overflow-y:scroll;margin:10px;">
 <center style="background:#1b1e24;padding:10px;color:#C1C3D1;"><h1>Last Games</h1></center>
 <table>
 <tbody> 
@@ -77,18 +96,11 @@
   </tr>
  </tbody>
  </table>
-
 </div>
 
-<div style="background-color:#f2f5f3; width:50%; height:50%; float:left">
-<center><h1>Net Worth</h1></center>
-  <div style="margin:20px;">
-        <canvas id="canvasNetWorth" height="235px" ></canvas>
-    </div>
-</div>
 
-<div style="background-color:#dfe3e0; width:50%; height:50%;float:right;overflow:hidden;overflow-y:scroll;">
-<center style="background:#1b1e24;padding:10px;color:#C1C3D1;"><h1>Today's Top 20 Stock Changes</h1></center>
+<div style="background-color:#f2f5f3; width:31%; float:left; height:30%; overflow:hidden;overflow-y:scroll;margin: 10px;">
+<center style="background:#1b1e24;padding:10px;color:#C1C3D1;"><h1>Today's Top 20 Changes</h1></center>
 <table>
 <thead>
   <tr style="font-size:28px;">
