--- a/home.html
+++ b/home.html
@@ -32,14 +32,14 @@
 
     <div class="ter">
 
-<div style="margin:10px;height:40%;width:63.85%;background-color:#f2f5f3;float:left;">
+<div style="margin:1%;height:40%;width:63.85%;background-color:#f2f5f3;float:left;">
 <center><h1>Net Worth</h1></center>
   <div style="margin:20px;">
         <canvas id="canvasNetWorth" height="320%"></canvas>
     </div>
 </div>
 
-<div style="background-color:#f2f5f3; width:31%; height:40%;overflow:hidden;overflow-y:scroll;margin:0.3%;float: left;">
+<div style="background-color:#f2f5f3; width:31%; height:40%;overflow:hidden;overflow-y:scroll;margin:1%;float: left;">
 <center style="background:#1b1e24;padding:10px;color:#C1C3D1;"><h1>NEWS</h1></center>
 <br>
 <h3><strong style="color:black;">FUTMARKET Relase Date Set to 2017's Fall</strong></h3>
@@ -50,14 +50,14 @@
 
 <br>
 
-<div style="clear:left;background-color:#f2f5f3; width:31%; height:30%;float:left;margin:0.3%;overflow:hidden;">
+<div style="clear:left;background-color:#f2f5f3; width:31%; height:30%;float:left;margin:1%;overflow:hidden;">
       <center><h1>Your Portfolio</h1></center>
       <div id="canvas-holder">
         <canvas id="chart-area2" style="width:400px;float:center;"></canvas>
     </div>
 </div>
 
-<div style="background-color:#f2f5f3; width:31%; height:30%;float:left;overflow:hidden;overflow-y:scroll;margin:0.3%;">
+<div style="background-color:#f2f5f3; width:31%; height:30%;float:left;overflow:hidden;overflow-y:scroll;margin:1%;">
 <center style="background:#1b1e24;padding:10px;color:#C1C3D1;"><h1>Last Games</h1></center>
 <table>
 <tbody> 
@@ -99,7 +99,7 @@
 </div>
 
 
-<div style="background-color:#f2f5f3; width:31%; float:left; height:30%; overflow:hidden;overflow-y:scroll;margin: 0.3%;">
+<div style="background-color:#f2f5f3; width:31%; float:left; height:30%; overflow:hidden;overflow-y:scroll;margin: 1%;">
 <center style="background:#1b1e24;padding:10px;color:#C1C3D1;"><h1>Today's Top 20 Changes</h1></center>
 <table>
 <thead>
