--- a/home.html
+++ b/home.html
@@ -39,13 +39,15 @@
     </div>
 </div>
 
-<div style="background-color:#f2f5f3; width:31%; height:40%;overflow:hidden;overflow-y:scroll;margin:1%;float: left;">
+<div style="background-color:#f2f5f3; width:31%; height:40%;overflow:hidden;overflow-y:scroll;margin:1%;float:left;">
 <center style="background:#1b1e24;padding:10px;color:#C1C3D1;"><h1>NEWS</h1></center>
 <br>
+<div style="margin:12px;">
 <h3><strong style="color:black;">FUTMARKET Relase Date Set to 2017's Fall</strong></h3>
 <small style="color:#8e95a0;">According to FUTMARKET CEO, Pedro Andrade, the entire crew is working hard to deliver a playable version of the game as soon as possible.</small>
 <h3><strong style="color:black;">The Beta version is live!</strong></h3>
 <small style="color:#8e95a0;">First version of FUTMARKET is now live. For some reason you were specially picked for this test version, make your stay worth it.</small>
+</div>
 </div>
 
 <br>
@@ -99,7 +101,7 @@
 </div>
 
 
-<div style="background-color:#f2f5f3; width:31%; float:left; height:30%; overflow:hidden;overflow-y:scroll;margin: 1%;">
+<div style="background-color:#f2f5f3; width:31%; float:left; height:30%; overflow:hidden;overflow-y:scroll;overflow-x:auto;margin: 1%;">
 <center style="background:#1b1e24;padding:10px;color:#C1C3D1;"><h1>Today's Top 20 Changes</h1></center>
 <table>
 <thead>
