--- a/home.html
+++ b/home.html
@@ -35,8 +35,8 @@
 
 <div style="margin:1%;height:40%;width:63.85%;background-color:#f2f5f3;float:left;">
 <center><h1>Net Worth</h1></center>
-<button id="WeekChart" class="ChartBtnActivated">Week</button>
-<button id="SemesterChart">Semester</button>
+<button id="WeekChart">Week</button>
+<button id="SemesterChart" class="ChartBtnActivated">Semester</button>
 <button id="TodayChart">Today</button>
 <button id="YearChart">Year</button>
   <div id="SemesterChartGraph" style="margin:20px;">
