--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
       <li><center id="resposta"></center></li>
       <li><h3><center><a href="#" id="resposta1"></a></center></h3></li>
       <li><a class="active" href="home.html">Home</a></li>
-      <li><a href="#">Teams</a></li>
+      <li><a href="teams.html">Teams</a></li>
       <li><a href="#">Portfolio</a></li>
       <li><a href="#">Your Firm</a></li>
       <li><a href="#">Next Games</a></li>
@@ -34,8 +34,8 @@
 
 
 <div style="margin:1%;height:40%;width:63.85%;background-color:#f2f5f3;float:left;">
-<button id="TodayChart">Today</button>
 <center><h1>Net Worth</h1></center>
+<button id="TodayChart">Today</button>
 <button id="WeekChart">Week</button>
 <button id="SemesterChart" class="ChartBtnActivated">Semester</button>
 <button id="YearChart">Year</button>
