--- a/teams.html
+++ b/teams.html
@@ -29,5 +29,15 @@
       <li><a href="#" class="icons"><i class="fa fa-suitcase fa-2x icons" aria-hidden="true"></i></a></li>
       <li><a href="#" class="icons"><i class="fa fa-moon-o fa-2x icons" aria-hidden="true"></i></a></li>
     </ul>
+    <div class="ter">
+    <h1 style="color: black;margin:25px;">Select a Country to see the stocks available from that region</h1>
+    </div>
 </body>
+<script type="text/javascript">
+	window.onload = function() {
+      getPic2();
+      getName();
+      getName2();
+  };
+</script>
 </html>
