--- a/teams.html
+++ b/teams.html
@@ -114,8 +114,8 @@
       <li><input id="myInp" type="text" name="search" placeholder="Search.."></li>
       <li><center id="resposta"></center></li>
       <li><h3><center><a href="#" id="resposta1"></a></center></h3></li>
-      <li><a href="home.html">Home</a></li>
-      <li><a class="active" href="teams.html">Teams</a></li>
+      <li><a href="home">Home</a></li>
+      <li><a class="active" href="teams">Teams</a></li>
       <li><a href="#">Portfolio</a></li>
       <li><a href="#">Your Firm</a></li>
       <li><a href="#">Next Games</a></li>
