--- a/teams.html
+++ b/teams.html
@@ -99,7 +99,7 @@
     <title>FUT MARKET</title>
 </head>
 <body>
-    <ul>
+    <ul style="overflow:hidden;">
       <li><input id="myInp" type="text" name="search" placeholder="Search.."></li>
       <li><center id="resposta"></center></li>
       <li><h3><center><a href="#" id="resposta1"></a></center></h3></li>
@@ -113,7 +113,7 @@
       <li><a href="#" class="icons"><i class="fa fa-suitcase fa-2x icons" aria-hidden="true"></i></a></li>
       <li><a href="#" class="icons"><i class="fa fa-moon-o fa-2x icons" aria-hidden="true"></i></a></li>
     </ul>
-    <div class="ter" style="overflow-x:scroll;">
+    <div class="ter">
     <h1 style="color: black;margin:25px;">Select a Country to see the stocks available from that region</h1>
     <h4 style="color: black;margin:-20px 0 0 25px;">The darker the country, more teams it has</h4>
 
