--- a/teams.html
+++ b/teams.html
@@ -113,7 +113,7 @@
       <li><a href="#" class="icons"><i class="fa fa-suitcase fa-2x icons" aria-hidden="true"></i></a></li>
       <li><a href="#" class="icons"><i class="fa fa-moon-o fa-2x icons" aria-hidden="true"></i></a></li>
     </ul>
-    <div class="ter">
+    <div class="ter" style="overflow-x:scroll;">
     <h1 style="color: black;margin:25px;">Select a Country to see the stocks available from that region</h1>
     <h4 style="color: black;margin:-20px 0 0 25px;">The darker the country, more teams it has</h4>
 
