--- a/teams.html
+++ b/teams.html
@@ -66,6 +66,30 @@
       <li><a href="#" class="icons"><i class="fa fa-suitcase fa-2x icons" aria-hidden="true"></i></a></li>
       <li><a href="#" class="icons"><i class="fa fa-moon-o fa-2x icons" aria-hidden="true"></i></a></li>
     </ul>
+    <div class="hidden">
+      <img src="Flags/flags_mini/argentina_mini.png">
+      <img src="Flags/flags_mini/belgium_mini.png">
+      <img src="Flags/flags_mini/brasil_mini.png">
+      <img src="Flags/flags_mini/chile_mini.png">
+      <img src="Flags/flags_mini/china_mini.png">
+      <img src="Flags/flags_mini/colombia_mini.png">
+      <img src="Flags/flags_mini/ecuador_mini.png">
+      <img src="Flags/flags_mini/england_mini.png">
+      <img src="Flags/flags_mini/france_mini.png">
+      <img src="Flags/flags_mini/germany_mini.png">
+      <img src="Flags/flags_mini/greece_mini.png">
+      <img src="Flags/flags_mini/italy_mini.png">
+      <img src="Flags/flags_mini/mexico_mini.png">
+      <img src="Flags/flags_mini/netherlands_mini.png">
+      <img src="Flags/flags_mini/paraguay_mini.png">
+      <img src="Flags/flags_mini/portugal_mini.png">
+      <img src="Flags/flags_mini/spain_mini.png">
+      <img src="Flags/flags_mini/sweden_mini.png">
+      <img src="Flags/flags_mini/switzerland_mini.png">
+      <img src="Flags/flags_mini/uk_mini.png">
+      <img src="Flags/flags_mini/uruguay_mini.png">
+      <img src="Flags/flags_mini/usa_mini.png">
+    </div>
 <div class="ter">
     <h1 style="color: black;margin:25px;">Select a Country to see the stocks available from that region</h1>
     <h4 style="color: black;margin:-20px 0 0 25px;">The darker the country, more teams it has</h4>
