--- a/teams.html
+++ b/teams.html
@@ -6,7 +6,7 @@
   <link href="font-awesome-4.7.0/css/font-awesome.css" rel="stylesheet">
   <link rel="stylesheet" href="css/teams.css">
   <link rel="stylesheet" media="all" href="VectorMap/jquery-jvectormap.css"/>
-
+  <script src="js/teams.js"></script>
 
   <script src="VectorMap/assets/jquery-1.8.2.js"></script>
   <script src="VectorMap/jquery-jvectormap.js"></script>
@@ -66,7 +66,7 @@
       <li><a href="#" class="icons"><i class="fa fa-suitcase fa-2x icons" aria-hidden="true"></i></a></li>
       <li><a href="#" class="icons"><i class="fa fa-moon-o fa-2x icons" aria-hidden="true"></i></a></li>
     </ul>
-    <div class="hidden">
+    <div class="hidden">   <!--div para pre-load todas as mini_flag!-->
       <img src="Flags/flags_mini/argentina_mini.png">
       <img src="Flags/flags_mini/belgium_mini.png">
       <img src="Flags/flags_mini/brasil_mini.png">
