--- a/teams.html
+++ b/teams.html
@@ -89,7 +89,13 @@
       <img src="Flags/flags_mini/uk_mini.png">
       <img src="Flags/flags_mini/uruguay_mini.png">
       <img src="Flags/flags_mini/usa_mini.png">
-    </div>
+      <img src="escudos/brazilian_league/escudos_mini/flamengo_mini.png">
+      <img src="escudos/brazilian_league/escudos_mini/vasco_mini.png">
+      <img src="escudos/brazilian_league/escudos_mini/fluminense_mini.png">
+      <img src="escudos/brazilian_league/escudos_mini/botafogo_mini.png">
+    </div> <!--fim da div para pre-load todas as mini_flag!-->
+
+
 <div class="ter">
     <h1 style="color: black;margin:25px;">Select a Country to see the stocks available from that region</h1>
     <h4 style="color: black;margin:-20px 0 0 25px;">The darker the country, more teams it has</h4>
