--- a/teams.html
+++ b/teams.html
@@ -67,7 +67,7 @@
       <li><a href="#" class="icons"><i class="fa fa-moon-o fa-2x icons" aria-hidden="true"></i></a></li>
     </ul>
     <div class="hidden">   <!--div para pre-load todas as mini_flag!-->
-      <img src="Flags/flags_mini/argentina_mini.png">
+      <img src="Flags/flags_mini/argentina_mini.png"> <!--flag tem width:25px!-->
       <img src="Flags/flags_mini/belgium_mini.png">
       <img src="Flags/flags_mini/brasil_mini.png">
       <img src="Flags/flags_mini/chile_mini.png">
@@ -89,11 +89,11 @@
       <img src="Flags/flags_mini/uk_mini.png">
       <img src="Flags/flags_mini/uruguay_mini.png">
       <img src="Flags/flags_mini/usa_mini.png">
-      <img src="escudos/brazilian_league/escudos_mini/flamengo_mini.png">
+      <img src="escudos/brazilian_league/escudos_mini/flamengo_mini.png"> <!--escudo tem height:32px!-->
       <img src="escudos/brazilian_league/escudos_mini/vasco_mini.png">
       <img src="escudos/brazilian_league/escudos_mini/fluminense_mini.png">
       <img src="escudos/brazilian_league/escudos_mini/botafogo_mini.png">
-    </div> <!--fim da div para pre-load todas as mini_flag!-->
+    </div> <!--fim da div para pre-load todas as mini_flag/mini_escudo!-->
 
 
 <div class="ter">
