--- a/teams.html
+++ b/teams.html
@@ -2,6 +2,7 @@
 <html>
   <script src="js/fbSDK.js"></script>
   <script src='js/jquery-3.1.1.min.js'></script>
+  <script src="js/KryogenixSorttable.js"></script>
   <link href="font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <link href="font-awesome-4.7.0/css/font-awesome.css" rel="stylesheet">
   <link rel="stylesheet" href="css/teams.css">
