--- a/teams.html
+++ b/teams.html
@@ -94,6 +94,24 @@
       <img src="escudos/brazilian_league/escudos_mini/vasco_mini.png">
       <img src="escudos/brazilian_league/escudos_mini/fluminense_mini.png">
       <img src="escudos/brazilian_league/escudos_mini/botafogo_mini.png">
+      <img src="escudos/brazilian_league/escudos_mini/america_mineiro_mini.png">
+      <img src="escudos/brazilian_league/escudos_mini/atletico_mineiro_mini.png">
+      <img src="escudos/brazilian_league/escudos_mini/cruzeiro_mini.png">
+      <img src="escudos/brazilian_league/escudos_mini/atletico_paranaense_mini.png">
+      <img src="escudos/brazilian_league/escudos_mini/chapecoense_mini.png">
+      <img src="escudos/brazilian_league/escudos_mini/gremio_mini.png">
+      <img src="escudos/brazilian_league/escudos_mini/internacional_mini.png">
+      <img src="escudos/brazilian_league/escudos_mini/figueirense_mini.png">
+      <img src="escudos/brazilian_league/escudos_mini/corinthias_mini.png">
+      <img src="escudos/brazilian_league/escudos_mini/santos_mini.png">
+      <img src="escudos/brazilian_league/escudos_mini/palmeiras_mini.png">
+      <img src="escudos/brazilian_league/escudos_mini/ponte_preta_mini.png">
+      <img src="escudos/brazilian_league/escudos_mini/sao_paulo_mini.png">
+      <img src="escudos/brazilian_league/escudos_mini/vitoria_mini.png">
+      <img src="escudos/brazilian_league/escudos_mini/sport_mini.png">
+      <img src="escudos/brazilian_league/escudos_mini/santa_cruz_mini.png">
+      <img src="escudos/brazilian_league/escudos_mini/bahia_mini.png">
+      <img src="escudos/brazilian_league/escudos_mini/goias_mini.png">
     </div> <!--fim da div para pre-load todas as mini_flag/mini_escudo!-->
 
 
