--- a/teams.html
+++ b/teams.html
@@ -121,6 +121,7 @@
 
   <div id="map1" style="width: 90%; height: 60%; margin: 25px;"></div>
     <div id="ShowCountryTeamsDiv"></div>
+    <div id="StockInfoDisplay"></div>
 </div>
 
 </body>
