--- a/teams.html
+++ b/teams.html
@@ -7,6 +7,7 @@
   <link href="font-awesome-4.7.0/css/font-awesome.css" rel="stylesheet">
   <link rel="stylesheet" href="css/teams.css">
   <link rel="stylesheet" media="all" href="VectorMap/jquery-jvectormap.css"/>
+  <script src="js/teamsContent.js"></script>
   <script src="js/teams.js"></script>
 
   <script src="VectorMap/assets/jquery-1.8.2.js"></script>
@@ -44,8 +45,6 @@
 
   <script src="VectorMap/assets/jquery-jvectormap-world-mill-en.js"></script>
   <script src="js/teamsRenderMap.js"></script>
-
-
 
 <head>
     <meta charset="UTF-8">
@@ -120,8 +119,9 @@
     <h4 style="color: black;margin:-20px 0 0 25px;">The darker the country, more teams it has</h4>
 
   <div id="map1" style="width: 90%; height: 60%; margin: 25px;"></div>
+  <button style="margin:25px;" id="BackBtn">Back</button>
     <div id="ShowCountryTeamsDiv"></div>
-    <div id="StockInfoDisplay"></div>
+    <div id="StockInfoDisplay" class="hidden"></div>
 </div>
 
 </body>
