--- a/teams.html
+++ b/teams.html
@@ -119,7 +119,7 @@
     <h4 style="color: black;margin:-20px 0 0 25px;">The darker the country, more teams it has</h4>
 
   <div id="map1" style="width: 90%; height: 60%; margin: 25px;"></div>
-  <button style="margin:25px;" id="BackBtn">Back</button>
+  <button style="margin:25px;" id="BackBtn" class="hidden">Back</button>
     <div id="ShowCountryTeamsDiv"></div>
     <div id="StockInfoDisplay" class="hidden"></div>
 </div>
